# nous

./: .gitignore  Cargo.toml  README.md
crates/nous-bridge/: Cargo.toml
crates/nous-bridge/src/: lib.rs
crates/nous-build/: Cargo.toml
crates/nous-build/src/: lib.rs
crates/nous-caps/: Cargo.toml
crates/nous-caps/src/: lib.rs
crates/nous-cli/: Cargo.toml
crates/nous-cli/src/: lib.rs  main.rs
crates/nous-core/: Cargo.toml
crates/nous-core/src/: chunk.rs  error.rs  id.rs  lib.rs  meta.rs  object.rs  rights.rs
crates/nous-http/: Cargo.toml
crates/nous-http/src/: lib.rs
crates/nous-store/: Cargo.toml
crates/nous-store/src/: lib.rs
diagrams/: architecture.mmd  failure_model.mmd
docs/: AI_RUNTIME.md  ARCHITECTURE.md  COMPLETE_SUMMARY.md  FAILURE_TOLERANCE.md  ISA_STRATEGY.md  LONGEVITY.md  MIGRATION.md  NOUS_LANG.md  PRINCIPLES.md  SECURITY.md  THREADING_PROCESSING.md
modules/: NOUSAI.md  NOUSBRIDGE.md  NOUSBUILD.md  NOUSCAPS.md  NOUSFS.md  NOUSNET.md  NOUSVM.md
prompts/: CONTINUATION_PROMPT.md  RESEARCH_CONTINUATION_PROMPT.md
prototypes/nous-cli/: README.md
prototypes/nousfs-rust/: README.md
research/: ASSUMPTIONS_AND_RISKS.md  RESEARCH_AGENDA.md
research/comparisons/: 01-os-architectures.md  02-isa-hardware.md  03-storage-build.md  04-failure-tolerance.md  05-ai-runtime.md  06-networking.md  07-post-quantum-crypto.md  08-longevity-reproducibility.md  README.md
roadmap/: MVP_TASKS.md  ROADMAP.md
