[workspace]
resolver = "2"
members = [
    "crates/nous-core",
    "crates/nous-store",
    "crates/nous-caps",
    "crates/nous-http",
    "crates/nous-cli",
]

[workspace.dependencies]
blake3    = "1"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
thiserror = "2"
base64    = "0.22"
tiny_http = "0.12"
clap      = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
